Kubernetes/apps/copyparty/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: copyparty
  namespace: utilities
  labels:
    app: copyparty
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app: copyparty
  template:
    metadata:
      labels:
        app: copyparty
    spec:
      containers:
        - name: copyparty
          image: ghcr.io/9001/copyparty-ac:1.20.25
          args:
            - -c
            - /config/copyparty.conf
          ports:
            - name: http
              containerPort: 3923
          volumeMounts:
            - name: config-template
              mountPath: /config
              readOnly: true
            - name: personal
              mountPath: /personal
            - name: media
              mountPath: /media
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5

      volumes:
        - name: config-template
          configMap:
            name: copyparty-config
        - name: personal
          persistentVolumeClaim:
            claimName: personal-pvc
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
