Kubernetes/apps/copyparty/service-tailscale.yaml
apiVersion: v1
kind: Service
metadata:
  name: copyparty-tailscale
  namespace: utilities
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: "files"
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: copyparty
