Kubernetes/apps/copyparty/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: copyparty
  namespace: utilities
spec:
  ports:
    - name: http
      port: 3923
      targetPort: http
  selector:
    app: copyparty
