Kubernetes/apps/copyparty/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: copyparty
  namespace: utilities
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`files.nerine.dev`)
      services:
        - name: copyparty
          port: 3923
      middlewares:
        - name: public-chain
          namespace: traefik
        - name: authentik
          namespace: traefik
  tls:
    certResolver: letsencrypt
    domains:
      - main: nerine.dev
        sans:
          - "*.nerine.dev"
